# GenAI

./: .gitignore  PYTHON_QUICK_START_TESTING.md  QUICK_START_TESTING.md  README.md  test-setup.md
cline-rules-test/: .gitignore  README.md  package.json
cline-rules-test/.clinerules/: agent-rules.xml  analysis.xml  dev-standards.xml
cline-rules-test/src/: index.js
cline/.clinerules/frameworks/: cdk.xml  dotnet.xml  terraform.xml
cline/.clinerules/prompts/: prompts_claude4.md
cline/sample_prompts/: repository-analysis.txt
python-cline-test/: .gitignore  README.md  pyproject.toml
python-cline-test/.clinerules/: memory-bank.md
python-cline-test/src/: __init__.py  main.py
python-cline-test/tests/: __init__.py  test_main.py
